Bug 147251 - LO 7.3 Calc Autofilter Dropdown does not show "Cancel" and "OK" buttons
Summary: LO 7.3 Calc Autofilter Dropdown does not show "Cancel" and "OK" buttons
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.3.0.3 release
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0 target:7.3.1
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-07 13:27 UTC by pharmankur
Modified: 2022-03-07 07:51 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
DEMO file - Libreoffice Calc 7.3 Filter Button Display Error (37.03 KB, application/vnd.oasis.opendocument.spreadsheet)
2022-02-07 13:28 UTC, pharmankur
Details
Presentation - calc Dropdown issue explained with screenshots (527.12 KB, application/vnd.oasis.opendocument.presentation)
2022-02-07 13:30 UTC, pharmankur
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pharmankur 2022-02-07 13:27:06 UTC
Description:
Libreoffice Calc Filter dropdown selection list has usually options of "Cancel" and "OK" buttons at the bottom of selection box.

In certain settings of LO 7.3 Calc, the Cancel and OK buttons are not displayed at at all in filter selection dialog box

I Notice that this issue has emerged when additional options are visible in filter dropdown viz. Text Colour and Background Colour

Steps to Reproduce:
1. Ensure you have installed Libreoffice 7.3.0.3
2.Prepare a calc data sheet with autofilter dropdown. Ensure to have very long list of option in that dropdown 
3.Click on the dropdown option selection button of any heading

Actual Results:
The filter list displayed doesnot show Cancel and OK buttons at the bottom 

Expected Results:
In call scenarios and settings, filter selection dox should show Cancel and OK buttons at the bottom.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
In certain scenarios IT DOES SHOW up with the Cancel and OK buttons at the bottom .

The scenarios are 
1) When we expand FORMULA bar and then Click on the dropdown option selection button of any heading ... Then dropdown position is optimised to show up Cancel and OK buttons at the bottom

2) When we keep ZOOMing in above certain percent (Rightmost Bottom Scale Option), and then Click on the dropdown option selection button of any heading ... Then dropdown position is optimised to show up Cancel and OK buttons at the bottom

But both above workaround are non intuitive and user wont get it (myself discovered it by accident)

Attaching a demo calc file and also a presentation with screenshot where all these scenarios are explained.
Comment 1 pharmankur 2022-02-07 13:28:55 UTC
Created attachment 178116 [details]
DEMO file - Libreoffice Calc 7.3 Filter Button Display Error

A demo calc file where you will get to see the issue.
Comment 2 pharmankur 2022-02-07 13:30:16 UTC
Created attachment 178117 [details]
Presentation - calc Dropdown issue explained with screenshots

Presentation - LO 7.3.0.3 Calc Dropdown issue explained with screenshots
Comment 3 Caolán McNamara 2022-02-07 15:21:21 UTC
I'm having a hard time reproducing this, but I know there are some positioning features in gtk3 that weren't available in all releases releases so can I get the version of your gtk3? Seeing as this is Ubuntu then the output of:

dpkg -l libgtk-3-0

and you might as well mention your resolution too so I can match to that too.
Comment 4 pharmankur 2022-02-07 16:58:17 UTC
I am using Linux Mint 20.2
To reproduce check with the demo file I have uploaded.
Or keep the row with filter at around 1/3rd distance from the top (just above the middle of the screen)
If filter row is towards the top of screen .. It works
If filter row is at the center of screen .. It works 
If filter row is towards the bottom of screen .. It works 

Only place it does not work is if filter row is around 1/3rd from top.
i.e. In my resolution setting in newly opened sheet, I can see first 30 rows.
Now If filter row placed at row no 10 and you click on filter button, you wont see Cancel and OK button in dropdown.

But same is visible perfectly if filter row is at row no 5,6 etc or 12,13,.. and above.



BTW as you have asked for ...

Output of dpkg -l libgtk-3-0

==================================================================

Desired=Unknown/Install/Remove/Purge/Hold
| Status=Not/Inst/Conf-files/Unpacked/halF-conf/Half-inst/trig-aWait/Trig-pend
|/ Err?=(none)/Reinst-required (Status,Err: uppercase=bad)
||/ Name             Version          Architecture Description
+++-================-================-============-============================>
ii  libgtk-3-0:amd64 3.24.20-0ubuntu1 amd64        GTK graphical user interface>
lines 1-6/6 (END)...skipping...
Desired=Unknown/Install/Remove/Purge/Hold
| Status=Not/Inst/Conf-files/Unpacked/halF-conf/Half-inst/trig-aWait/Trig-pend
|/ Err?=(none)/Reinst-required (Status,Err: uppercase=bad)
||/ Name             Version          Architecture Description
+++-================-================-============-====================================
ii  libgtk-3-0:amd64 3.24.20-0ubuntu1 amd64        GTK graphical user interface library


==================================================================
Resolution -
1366 X 768 (16:9)

Refesh Rate -
60.11 Hz

User Interface Scale -
1x
Comment 5 Caolán McNamara 2022-02-07 19:54:07 UTC
gdk_window_move_to_rect is available in 3.24 so its not the absence of that which triggers is, so at least don't have to worry about that
Comment 6 Caolán McNamara 2022-02-07 20:33:36 UTC
I can reproduce it anyway, so that's half the battle
Comment 7 Commit Notification 2022-02-08 20:53:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/50bad83484f7f36c2e43b6df8390ee280fc4d469

tdf#147251 can't generally shrink popovers if they don't fit under/over

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2022-02-08 21:08:16 UTC
that looks better in trunk, backport to 7-3 in gerrit
Comment 9 Commit Notification 2022-02-09 20:56:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/a94fa33d9584176ed5dcb8a0311173b1ad59ffaa

tdf#147251 can't generally shrink popovers if they don't fit under/over

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 pharmankur 2022-03-07 07:51:19 UTC
@Caolán McNamara
Today Updated to --
Version: 7.3.1.3 / LibreOffice Community

Found the buttons are now showing up well !

Thanks a lot for resolving :)