tdf#147251 can't generally shrink popovers if they don't fit under/over

so instead forget about forcing under/over if it doesn't fit on either
side and just position so its visible

Change-Id: I529bf0d2bb1a3108a8702792ef067372441c2002